[package]
name = "efs-proxy"
edition = "2021"
build = "build.rs"
# The version of efs-proxy is tied to efs-utils.
version = "3.0.0"
publish = false
license = "MIT"

[dependencies]
anyhow = "1.0.72"
atomic_enum = "0.2"
async-trait = "0.1"
aws-config = "1.6.3"
aws-credential-types = "1.2.3"
aws-sdk-s3 = "1.87.0"
aws-sdk-cloudwatch = "1.64.0"
aws-sdk-cloudwatchlogs = "1.64.0"
aws-smithy-http-client = { version = "1.1.9", features = ["default-client", "rustls-aws-lc", "rustls-aws-lc-fips"] }
aws-smithy-types = "1.3"
bytes = { version = "1.4.0" }
chrono = "0.4"
clap = { version = "=4.0.0", features = ["derive"] }
dashmap = "6.0.1"
dyn-clone = "1.0"
futures = "0.3"
hyper = "0.14"
log = "0.4"
libc = "0.2"
log4rs = { version = "1.2.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"]}
lru = "0.16"
moka = { version = "0.12.10", features = ["sync"] }
nix = { version = "0.26.2", features = ["signal"]}
onc-rpc = "0.3.3"
rand = "0.8.5"
regex = "1.10.2"
tikv-jemallocator = "0.6"
s2n-tls = {version="^0.3.19",features=["fips"]}
s2n-tls-tokio = "^0.3.19"
serde = {version="1.0.175",features=["derive"]}
serde_ini = "0.2.0"
static_assertions = "1.1.0"
strum_macros = "0.27.1"
sysinfo = "0.33"
thiserror = "1.0.44"
tokio = { version = "^1.40.0", features = ["full"] }
tokio-util = "0.7.8"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}
xdr-codec = { path = "rust-xdr/xdr-codec"}

[dev-dependencies]
mockall = "0.11.3"
test-case = "*"
tokio = { version = "1.29.0", features = ["test-util"] }
tempfile = "3.10.1"
hex-literal = "1.0.0"
aws-smithy-mocks = "0.1.1"
aws-sdk-s3 = { version = "1.87.0", features = ["test-util"] }
aws-smithy-runtime-api = "1.8.0"
serial_test = "3.0"

[build-dependencies]
xdrgen = { path = "rust-xdr/xdrgen" }
